index page photo fixed

--- a/Folder/index.html
+++ b/Folder/index.html
@@ -40,8 +40,8 @@
     <!-- ALL THE LINKS WILL GO TO categories.html -->
 
     <div class="index-main-img">
-        <a  href="merlin.html"></a><img id="main-index-img" src="images/index-img/Off-the-Wall.jpg" alt="" srcset=""></a> 
-      </div>
+        <img id="main-index-img" style="width: 100%; height: 60rem;" src="sample.jpg" alt="" srcset="">
+    </div>
       
       <br>
 
